--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ src="https://www.facebook.com/tr?id=1383551356849358&ev=PageView&noscript=1"
                 </div>
             </div>
             
-            <a href="#purchase" class="cta-button">
+           <a href="https://buy.stripe.com/fZudR92DX5cmh0Zatl8bS00" class="cta-button" style="background: white; color: #667eea;">Get Instant Access for $27</a>
                 Get Instant Access
                 <span class="price-badge">Only $27</span>
             </a>
