--- a/index.html
+++ b/index.html
@@ -489,10 +489,10 @@ src="https://www.facebook.com/tr?id=1383551356849358&ev=PageView&noscript=1"
                 </div>
             </div>
             
-           <a href="https://buy.stripe.com/fZudR92DX5cmh0Zatl8bS00" class="cta-button" style="background: white; color: #667eea;">Get Instant Access for $27</a>
-                Get Instant Access
-                <span class="price-badge">Only $27</span>
-            </a>
+           <a href="https://buy.stripe.com/fZudR92DX5cmh0Zatl8bS00" class="cta-button">
+    Get Instant Access
+    <span class="price-badge">Only $27</span>
+</a>
             
             <p style="margin-top: 20px; font-size: 14px; color: #7f8c8d;">
                 ⏱️ 15-30 minutes per day<br>
@@ -606,7 +606,7 @@ src="https://www.facebook.com/tr?id=1383551356849358&ev=PageView&noscript=1"
         <div class="container">
             <h2>Ready to Turn Your Clutter Into Cash?</h2>
             <p>Join hundreds who've discovered money hiding in their homes</p>
-            <a href="https://buy.stripe.com/fZudR92DX5cmh0Zatl8bS00" class="cta-button"> style="background: white; color: #667eea;">Get Instant Access for $27</a>
+            <a href="https://buy.stripe.com/fZudR92DX5cmh0Zatl8bS00" class="cta-button" style="background: white; color: #667eea;">Get Instant Access for $27</a>
             <p style="margin-top: 20px; font-size: 14px; opacity: 0.9;">
                 ✓ Instant access to all 5 days<br>
                 ✓ 100 Item Value app scans included<br>
