--- a/terms.html
+++ b/terms.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Terms and conditions for the Declutter to Cash Challenge. Learn about our 30-day money-back guarantee, digital product delivery, and user responsibilities.">
     <title>Terms & Conditions - Declutter to Cash Challenge</title>
     <style>
         * {
@@ -117,9 +118,4 @@
         <h2>12. Contact Information</h2>
         <p>For questions about these Terms & Conditions, please contact us at:<br>
         Elaro Digital Edge<br>
-        Email: hello@itemvalue.app</p>
-        
-        <a href="/" class="back-link">← Back to Challenge</a>
-    </div>
-</body>
-</html>
+        Email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="f8909d949497b8918c9d958e99948d9dd6998888">[email&#1
