--- a/privacy.html
+++ b/privacy.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Privacy policy for the Declutter to Cash Challenge by Elaro Digital Edge. Learn how we collect, use, and protect your personal information.">
     <title>Privacy Policy - Declutter to Cash Challenge</title>
     <style>
         * {
@@ -137,9 +138,4 @@
         <h2>13. Contact Us</h2>
         <p>If you have questions about this Privacy Policy, please contact us at:<br>
         Elaro Digital Edge<br>
-        Email: hello@itemvalue.app</p>
-        
-        <a href="/" class="back-link">← Back to Challenge</a>
-    </div>
-</body>
-</html>
+        Email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="ef878a838380af869b8a82998e839a8ac18e9f9f">[email&#1
